--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "A Vanilla.js dropin library for making HTML tables sortable",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "author": "Brendan Beltz <brendanwebdev@gmail.com> (https://github.com/bthegit)",
   "bugs": {
     "url": "https://github.com/BtheGit/sortable-js/issues"
-  },  
-  "license": "ISC",
-  "dependencies": {
-    "@babel/preset-env": "^7.0.0-beta.44"
   },
+  "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.0"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14"
   }
 }
