--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./lib/sortablejs.js",
   "scripts": {
     "start": "webpack --watch --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "test": "jest --colors --watch --verbose"
   },
   "author": "Brendan Beltz <brendanwebdev@gmail.com> (https://github.com/bthegit)",
   "repository": {
@@ -20,6 +21,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
+    "jest": "^22.4.3",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.14"
   }
